# mecheye_cpp_interface

./: CMakeLists.txt  README.md
include/: CameraClient.h  CameraCmd.h  PointCloudTools.h
proto/: image.pb.cc  image.pb.h
sample/: change3DExp.cpp  sample.h  sample1_parameter.cpp  sample2_ImgAndCloud.cpp
src/: CameraClient.cpp  PointCloudTools.cpp  chang2DExp.cpp  get2D.cpp  get3D.cpp  getCloud.cpp  main.cpp  sample1_set2Dexposure.cpp  sample2_set3Dexposure.cpp  sample3_getColorIMG.cpp  sample4_getDepthIMG.cpp  sample5_getRGBCloud.cpp
